# rs-tftpd

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SECURITY.md  build.rs
.github/workflows/: integration.yml  unit.yml
src/: client.rs  client_config.rs  client_main.rs  config.rs  convert.rs  drop.rs  lib.rs  log.rs  main.rs  message.rs  options.rs  packet.rs  server.rs  socket.rs  window.rs  worker.rs
tests/: integration_test.rs
