[package]
name = "tftpd"
version = "0.5.0"
authors = ["Altuğ Bakan <mail@alt.ug>"]
edition = "2021"
description = "Multithreaded TFTP server daemon"
repository = "https://github.com/altugbakan/rs-tftpd"
license = "MIT"
keywords = ["tftp", "server"]
categories = ["command-line-utilities"]

[[bin]]
name = "tftpc"
path = "src/client_main.rs"
required-features = ["client"]

[[bin]]
name = "tftpd"
path = "src/main.rs"

[features]
client = []
integration = ["debug_drop", "client"]
debug_drop = []
